# hello-mongo

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: app.rs  document.rs  lib.rs  main.rs
